--- a/PhotoGallery/PhotoGallery/Views/ListImag.xaml
+++ b/PhotoGallery/PhotoGallery/Views/ListImag.xaml
@@ -4,7 +4,7 @@
              x:Class="PhotoGallery.Views.ListImag">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="орппдлрплоорорллррдрд"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
