--- a/PhotoGallery/PhotoGallery/Views/LoginPage.xaml
+++ b/PhotoGallery/PhotoGallery/Views/LoginPage.xaml
@@ -3,28 +3,49 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PhotoGallery.Views.LoginPage"
              xmlns:converters="clr-namespace:PhotoGallery.Converters"
-             xmlns:behaviors="clr-namespace:PhotoGallery" />
-<ContentPage.Resources>
-    <ResourceDictionary>
-        <converters:PinEntry1Converter x:Key="PinEntry1Converter" />
-        <converters:PinEntry2Converter x:Key="PinEntry2Converter" />
-        <converters:PinEntry3Converter x:Key="PinEntry3Converter" />
-        <converters:PinEntry4Converter x:Key="PinEntry4Converter" />
-    </ResourceDictionary>
-</ContentPage.Resources>
-<ScrollView>
-    <StackLayout Padding="30, 90, 30, 0">
-        <Entry x:Name="HiddenEntry" IsVisible="False" Text="{Binding Pin}" Keyboard="Numeric" 
+             xmlns:behaviors="clr-namespace:PhotoGallery" >
+    <!--<ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:PinEntry1Converter x:Key="PinEntry1Converter" />
+            <converters:PinEntry2Converter x:Key="PinEntry2Converter" />
+            <converters:PinEntry3Converter x:Key="PinEntry3Converter" />
+            <converters:PinEntry4Converter x:Key="PinEntry4Converter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>-->
+
+    <ScrollView>
+        <StackLayout Padding="30, 90, 30, 0">
+            <Entry x:Name="HiddenEntry" IsVisible="False" Text="{Binding Pin}" Keyboard="Numeric" 
                 HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-            <Entry.Behaviors>
-                <behaviors:EntryLengthValidatorBehavior MaxLength="4" />
-            </Entry.Behaviors>
-        </Entry>
-        <Grid>
-            <Entry x:Name="pin1" WidthRequest="50" HeightRequest="50" Grid.Row="0" Grid.Column="0"/>
-            <Entry x:Name="pin2" WidthRequest="50" HeightRequest="50" Grid.Row="0" Grid.Column="1"/>
-            <Entry x:Name="pin3" WidthRequest="50" HeightRequest="50" Grid.Row="0" Grid.Column="2"/>
-            <Entry x:Name="pin4" WidthRequest="50" HeightRequest="50" Grid.Row="0" Grid.Column="3"/>
-        </Grid>
-    </StackLayout>
-</ScrollView>
+                <Entry.Behaviors>
+                    <behaviors:EntryLengthValidatorBehavior MaxLength="4" />
+                </Entry.Behaviors>
+            </Entry>
+            <Grid HorizontalOptions="Center" VerticalOptions="Center">
+                <Entry x:Name="Entry1" WidthRequest="50" HeightRequest="50" IsPassword="True" 
+                    Grid.Row="0" Grid.Column="0" HorizontalTextAlignment="Center" IsEnabled="False"
+                    BindingContext="{x:Reference Name=HiddenEntry}" Margin="0"
+                    Text="{Binding Path=Text, Mode=OneWay, Converter={StaticResource PinEntry1Converter}}" />
+
+                <Entry x:Name="Entry2" WidthRequest="50" HeightRequest="50" IsPassword="True"
+                    Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="Center"  IsEnabled="False"
+                    BindingContext="{x:Reference Name=HiddenEntry}"
+                    Text="{Binding Path=Text, Mode=OneWay, Converter={StaticResource PinEntry2Converter}}" />
+
+                <Entry x:Name="Entry3" WidthRequest="50" HeightRequest="50" IsPassword="True" 
+                    Grid.Row="0" Grid.Column="2" HorizontalTextAlignment="Center" IsEnabled="False"
+                    BindingContext="{x:Reference Name=HiddenEntry}"
+                    Text="{Binding Path=Text, Mode=OneWay, Converter={StaticResource PinEntry3Converter}}" />
+
+                <Entry x:Name="Entry4" WidthRequest="50" HeightRequest="50" IsPassword="True" 
+                    Grid.Row="0" Grid.Column="3" HorizontalTextAlignment="Center"  IsEnabled="False"
+                    BindingContext="{x:Reference Name=HiddenEntry}"
+                    Text="{Binding Path=Text, Mode=OneWay, Converter={StaticResource PinEntry4Converter}}" />
+            </Grid>
+            <!--<StackLayout Margin="0, 10, 0, 0">
+                <Label Text="PIN should be 4 digits. Please try again." TextColor="Red" IsVisible="{Binding ShowsError}" />
+            </StackLayout>-->
+        </StackLayout>
+    </ScrollView>
+
+</ContentPage>
